--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: ScottiePie Development Work
-email: macsteps@gmail.com 
+title: Scott Stephenson (macsteps)
+email: macsteps [at] gmail [dot] com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A record of development work.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://http://macsteps.github.io/" # the base hostname & protocol for your site
+twitter_username: scottstephenson
+github_username: macsteps
 
 # Build settings
 markdown: kramdown
